# assigment-submission

./: .gitignore  README.md  assignment01.py  pyproject.toml  run_assignment01_01_smoke_plot.py  run_assignment01_02_cases_plot.py  run_assignment01_03_cases_animation.py
.github/workflows/: ci.yml  test.yml
scicomp3/: __init__.py
scicomp3/core/: result.py
scicomp3/ode/: methods.py  solver.py
scicomp3/pde/: __init__.py  wave.py
scicomp3/validation/: validation.py
scripts/: a1_1_cases_animation.py  a1_1_cases_compared_to_analytical.py  a1_1_cases_plot.py  a1_1_leapfrog_comparison.py  a1_1_smoke_test.py  a1_1_validation_boundary_conditions.py  a1_2_diffusion.py  a1_2_diffusion_animation.py  a1_2_diffusion_verification.py  a1_5_gauss_seidel.py  a1_6_K_sinks.py  a1_6_convergence.py  a1_6_gauss_seidel.py  a1_6_insulating.py  a1_6_insulator_time_evolution.py  a1_6_insulators_gauss_seidel.py  a1_6_insulators_jacobi.py  a1_6_insulators_k_impact.py  a1_6_insulators_sor.py  a1_6_insulators_sor_animation.py  a1_6_iterative_convergence.py  a1_6_iterative_methods.py  a1_6_iterative_sor.py  a1_6_jacobi.py  a1_6_objects.py  a1_6_objects_k_impact.py  a1_6_omega_for_various_N.py  a1_6_omega_for_various_N_plot.py  a1_6_omega_for_various_N_sim.py  a1_6_optimal_omega.py  a1_6_seeking_optimal_omega.py  a1_6_sinks_and_insulators_sor.py  a1_6_sinks_gauss_seidel.py  a1_6_sinks_jacobi.py  a1_6_sinks_k_impact.py  a1_6_sinks_sor.py  a1_6_sinks_sor_animation.py  a1_6_sor.py  a1_6_sor_optimal_omega.py
src/scicomp3/: __init__.py
testcases/: compare_old_new_solver.py
tests/: __init__.py  test_boundary_conditions.py  test_diffusion.py  test_gauss_seidel.py  test_insulating.py  test_jacobi.py  test_laplace_solvers.py  test_objects.py  test_scripts.py  test_solver_comparison.py  test_sor.py
(+16 files in other folders)
