[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scicomp3"
version = "0.2.1"
requires-python = ">=3.10"
dependencies = ["numpy", "scipy", "joblib", "matplotlib", "scienceplots"]

[project.optional-dependencies]
plot = ["matplotlib", "scienceplots"]
test = ["pytest"]
dev = ["scicomp3[plot,test]"]

[tool.hatch.build.targets.wheel]
packages = ["src/scicomp3"]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
